--- a/index.html
+++ b/index.html
@@ -9,9 +9,247 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./css/main.css" />
     <script defer src="./js/app.js"></script>
     <title>Frontend Mentor | [Challenge Name Here]</title>
   </head>
-  <body></body>
+  <body>
+    <header class="main-header">
+      <div class="header-title">
+        <h1>Social Media Dashboard</h1>
+        <p>Total Followers: 23,004</p>
+      </div>
+
+      <label for="switch" class="theme-switcher">
+        Dark Mode
+        <input type="checkbox" role="switch" id="switch" />
+      </label>
+    </header>
+
+    <main>
+      <div class="card card-hero card-facebook">
+        <header class="card-header">
+          <img src="./images/icon-facebook.svg" alt="Facebook Logo" />
+          <p>@nathanf</p>
+        </header>
+
+        <h2>1987</h2>
+        <span>Followers</span>
+
+        <footer class="card-footer">
+          <img
+            src="./images/icon-up.svg"
+            alt="Green up arrow indicating growth"
+          />
+          12 Today
+        </footer>
+      </div>
+
+      <div class="card card-hero card-twitter">
+        <header class="card-header">
+          <img src="./images/icon-twitter.svg" alt="Twitter Logo" />
+          <p>@nathanf</p>
+        </header>
+
+        <h2>1044</h2>
+        <span>Followers</span>
+
+        <footer class="card-footer">
+          <img
+            src="./images/icon-up.svg"
+            alt="Green up arrow indicating growth"
+          />
+          99 Today
+        </footer>
+      </div>
+
+      <div class="card card-hero card-instagram">
+        <header class="card-header">
+          <img src="./images/icon-instagram.svg" alt="Instagram Logo" />
+          <p>@realnathanf</p>
+        </header>
+
+        <h2>11k</h2>
+        <span>Followers</span>
+
+        <footer class="card-footer">
+          <img
+            src="./images/icon-up.svg"
+            alt="Green up arrow indicating growth"
+          />
+          1099 Today
+        </footer>
+      </div>
+
+      <div class="card card-hero card-youtube">
+        <header class="card-header">
+          <img src="./images/icon-youtube.svg" alt="Youtube Logo" />
+          <p>Nathan F.</p>
+        </header>
+
+        <h2>8239</h2>
+        <span>Followers</span>
+
+        <footer class="card-footer">
+          <img
+            src="./images/icon-down.svg"
+            alt="Red down arrow indicating loss"
+          />
+          144 Today
+        </footer>
+      </div>
+    </main>
+
+    <section class="overview">
+      <div class="card">
+        <header class="card-header">
+          <p>Page Views</p>
+          <img src="./images/icon-facebook.svg" alt="Facebook Logo" />
+        </header>
+
+        <footer class="card-footer">
+          <h3>87</h3>
+          <div class="trend">
+            <img
+              src="./images/icon-up.svg"
+              alt="Green up arrow indicating growth"
+            />
+            3%
+          </div>
+        </footer>
+      </div>
+
+      <div class="card">
+        <header class="card-header">
+          <p>Likes</p>
+          <img src="./images/icon-facebook.svg" alt="Facebook Logo" />
+        </header>
+
+        <footer class="card-footer">
+          <h3>52</h3>
+          <div class="trend">
+            <img
+              src="./images/icon-down.svg"
+              alt="Red down arrow indicating loss"
+            />
+            2%
+          </div>
+        </footer>
+      </div>
+
+      <div class="card">
+        <header class="card-header">
+          <p>Likes</p>
+          <img src="./images/icon-instagram.svg" alt="Instagram Logo" />
+        </header>
+
+        <footer class="card-footer">
+          <h3>5462</h3>
+          <div class="trend">
+            <img
+              src="./images/icon-up.svg"
+              alt="Green up arrow indicating growth"
+            />
+            2257%
+          </div>
+        </footer>
+      </div>
+
+      <div class="card">
+        <header class="card-header">
+          <p>Profile Views</p>
+          <img src="./images/icon-instagram.svg" alt="Instagram Logo" />
+        </header>
+
+        <footer class="card-footer">
+          <h3>52k</h3>
+          <div class="trend">
+            <img
+              src="./images/icon-up.svg"
+              alt="Green up arrow indicating growth"
+            />
+            1375%
+          </div>
+        </footer>
+      </div>
+
+      <div class="card">
+        <header class="card-header">
+          <p>Retweets</p>
+          <img src="./images/icon-twitter.svg" alt="Twitter Logo" />
+        </header>
+
+        <footer class="card-footer">
+          <h3>117</h3>
+          <div class="trend">
+            <img
+              src="./images/icon-up.svg"
+              alt="Green up arrow indicating growth"
+            />
+            303%
+          </div>
+        </footer>
+      </div>
+
+      <div class="card">
+        <header class="card-header">
+          <p>Likes</p>
+          <img src="./images/icon-twitter.svg" alt="Twitter Logo" />
+        </header>
+
+        <footer class="card-footer">
+          <h3>507</h3>
+          <div class="trend">
+            <img
+              src="./images/icon-up.svg"
+              alt="Green up arrow indicating growth"
+            />
+            553%
+          </div>
+        </footer>
+      </div>
+
+      <div class="card">
+        <header class="card-header">
+          <p>Likes</p>
+          <img src="./images/icon-youtube.svg" alt="Youtube Logo" />
+        </header>
+
+        <footer class="card-footer">
+          <h3>107</h3>
+          <div class="trend">
+            <img
+              src="./images/icon-down.svg"
+              alt="Red down arrow indicating loss"
+            />
+            19%
+          </div>
+        </footer>
+      </div>
+
+      <div class="card">
+        <header class="card-header">
+          <p>Page Views</p>
+          <img src="./images/icon-youtube.svg" alt="Youtube Logo" />
+        </header>
+
+        <footer class="card-footer">
+          <h3>1407</h3>
+          <div class="trend">
+            <img
+              src="./images/icon-down.svg"
+              alt="Red down arrow indicating loss"
+            />
+            12%
+          </div>
+        </footer>
+      </div>
+    </section>
+  </body>
 </html>
