--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <h2>1987</h2>
         <span>Followers</span>
 
-        <footer class="card-footer">
+        <footer class="card-footer up">
           <img
             src="./images/icon-up.svg"
             alt="Green up arrow indicating growth"
@@ -60,7 +60,7 @@
         <h2>1044</h2>
         <span>Followers</span>
 
-        <footer class="card-footer">
+        <footer class="card-footer up">
           <img
             src="./images/icon-up.svg"
             alt="Green up arrow indicating growth"
@@ -78,7 +78,7 @@
         <h2>11k</h2>
         <span>Followers</span>
 
-        <footer class="card-footer">
+        <footer class="card-footer up">
           <img
             src="./images/icon-up.svg"
             alt="Green up arrow indicating growth"
@@ -94,9 +94,9 @@
         </header>
 
         <h2>8239</h2>
-        <span>Followers</span>
+        <span>Subscribers</span>
 
-        <footer class="card-footer">
+        <footer class="card-footer down">
           <img
             src="./images/icon-down.svg"
             alt="Red down arrow indicating loss"
@@ -106,6 +106,7 @@
       </div>
     </main>
 
+    <h4>Overview - Today</h4>
     <section class="overview">
       <div class="card">
         <header class="card-header">
@@ -115,7 +116,7 @@
 
         <footer class="card-footer">
           <h3>87</h3>
-          <div class="trend">
+          <div class="trend up">
             <img
               src="./images/icon-up.svg"
               alt="Green up arrow indicating growth"
@@ -133,7 +134,7 @@
 
         <footer class="card-footer">
           <h3>52</h3>
-          <div class="trend">
+          <div class="trend down">
             <img
               src="./images/icon-down.svg"
               alt="Red down arrow indicating loss"
@@ -151,7 +152,7 @@
 
         <footer class="card-footer">
           <h3>5462</h3>
-          <div class="trend">
+          <div class="trend up">
             <img
               src="./images/icon-up.svg"
               alt="Green up arrow indicating growth"
@@ -169,7 +170,7 @@
 
         <footer class="card-footer">
           <h3>52k</h3>
-          <div class="trend">
+          <div class="trend up">
             <img
               src="./images/icon-up.svg"
               alt="Green up arrow indicating growth"
@@ -187,7 +188,7 @@
 
         <footer class="card-footer">
           <h3>117</h3>
-          <div class="trend">
+          <div class="trend up">
             <img
               src="./images/icon-up.svg"
               alt="Green up arrow indicating growth"
@@ -205,7 +206,7 @@
 
         <footer class="card-footer">
           <h3>507</h3>
-          <div class="trend">
+          <div class="trend up">
             <img
               src="./images/icon-up.svg"
               alt="Green up arrow indicating growth"
@@ -223,7 +224,7 @@
 
         <footer class="card-footer">
           <h3>107</h3>
-          <div class="trend">
+          <div class="trend down">
             <img
               src="./images/icon-down.svg"
               alt="Red down arrow indicating loss"
@@ -241,7 +242,7 @@
 
         <footer class="card-footer">
           <h3>1407</h3>
-          <div class="trend">
+          <div class="trend down">
             <img
               src="./images/icon-down.svg"
               alt="Red down arrow indicating loss"
