--- a/index.html
+++ b/index.html
@@ -17,9 +17,11 @@
     />
     <link rel="stylesheet" href="./css/main.css" />
     <script defer src="./js/app.js"></script>
-    <title>Frontend Mentor | [Challenge Name Here]</title>
+    <title>Frontend Mentor | Social media dashboard with theme switcher</title>
   </head>
   <body>
+    <section class="bg-pattern"></section>
+
     <header class="main-header">
       <div class="header-title">
         <h1>Social Media Dashboard</h1>
